[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.72"
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
csv = "1.1"